omni-lib/test_resources/omni_bad/DuplicateTopDefs.golden
error:
duplicate identifier 'function'
at
test_resources\omni_bad\DuplicateTopDefs.omni:3:1-3:9
test_resources\omni_bad\DuplicateTopDefs.omni:5:1-5:9
     