omni-lib/test_resources/omni_bad/DuplicateTopDefs.omni
module DuplicateTopDefs()

function() : Unit = ()

function() : Unit = ()

main() : Int = 0